--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     </div>
     <div class="soustitre">
         <a href="../page/antre.html">
-            Atelier de Sérigrahie
+            Atelier de sérigrahie artisanale
         </a>
     </div>
     <div class="adresse">
         <a href="../page/antre.html">
-            <br><br>14 Rue du Cheval Blanc
+            <br><br>13 rue du Cheval Blanc
             <br> 54 000 Nancy</h2>
         </a>
     </div>
