--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     </div>
     <div class="adresse">
         <a href="../page/antre.html">
-            <br><br>14 rue du Cheval Blanc
-            <br> 54 000 Nancy</h2>
+            <br><br> 14 rue du Cheval Blanc <br> 54 000 Nancy
         </a>
     </div>
 
