--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" type="image/png" href="../images/Antre-img/icon.png" />
+<link rel="icon" type="image/png" href="../images/Antre/icon.png" />
 <link rel="stylesheet" href="../antre.css">
 <script src="../images/hellbox.js"></script>
 <meta name="viewport" content="initial-scale=1" />
@@ -40,11 +40,6 @@ Design by Clémence Fontaine           `--------'-->
     <div class="soustitre">
         <a href="../page/antre.html">
             Atelier de sérigrahie artisanale
-        </a>
-    </div>
-    <div class="adresse">
-        <a href="../page/antre.html">
-            <br><br> 14 rue du Cheval Blanc <br> 54 000 Nancy
         </a>
     </div>
 
