--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@ Design by Clémence Fontaine           `--------'-->
             <br>Nous proposons des ateliers, collaborons avec des artistes et artisan.e.s, et réalisons vos demandes d’impression. Nous accompagnons et menons tout type de projet :<br><br>
             <div style="text-indent: 2vh;">- Impression, reproduction d’oeuvre</div>
             <div style="text-indent: 2vh;">- Impression sur demande</div>
-            <div style="text-indent: 2vh;">- Ateliers d’initiation, de perfectionnement</div>
+            <div style="text-indent: 2vh;">- Ateliers d’initiation/perfectionnement</div>
             <div style="text-indent: 2vh;">- Ateliers thématiques</div>
             <div style="text-indent: 2vh;">- Auto-créations</div>
-            <div style="text-indent: 2vh;">- Projets collaboratifs artistiques et artisanaux</div>
+            <div style="text-indent: 2vh;">- Projets de collaboratifs</div>
             <br>14 Rue du Cheval Blanc, Nancy <br>À la MJC Lillebonne.
             <br><br>
         </div>
