--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@ Design by Clémence Fontaine           `--------'-->
             <br>Nous proposons des ateliers, collaborons avec des artistes et artisan.e.s, et réalisons vos demandes d’impression. Nous accompagnons et menons tout type de projet :<br><br>
             <div style="text-indent: 2vh;">- Impression, reproduction d’oeuvre</div>
             <div style="text-indent: 2vh;">- Impression sur demande</div>
-            <div style="text-indent: 2vh;">- Ateliers d’initiation/perfectionnement</div>
-            <div style="text-indent: 2vh;">- Ateliers thématiques</div>
+            <div style="text-indent: 2vh;">- Cours d’initiation</div>
+            <div style="text-indent: 2vh;">- Ateliers de perfectionnement</div>
+            <div style="text-indent: 2vh;">- Stages thématiques</div>
             <div style="text-indent: 2vh;">- Auto-créations</div>
             <div style="text-indent: 2vh;">- Projets de collaboratifs</div>
             <br>14 Rue du Cheval Blanc, Nancy <br>À la MJC Lillebonne.
@@ -75,7 +76,7 @@ Design by Clémence Fontaine           `--------'-->
         Pour les professionnels, nous pouvons nous déplacer dans votre structure, le temps d’une démonstration, d’un atelier participatif, d’une initiation, etc. Nous nous basons sur vos envies pour créer un atelier adapté à votre espace.  
         ">
             <a href="../page/atelier-ouverts.html">
-                <h3>Atelier ouverts</h3>
+                <h3>Atelier-Ouverts</h3>
                 </a></span>
 
         <span class="infobulle1" aria-label="Nous participons à des évènements et organisons des ateliers et expositions diverses, en lien avec l’artisanat et la sérigraphie. Retrouvez les infos et dates ici prochainement. ">
