--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Design by Clémence Fontaine           `--------'-->
             <div style="text-indent: 2vh;">- Ateliers de perfectionnement</div>
             <div style="text-indent: 2vh;">- Stages thématiques</div>
             <div style="text-indent: 2vh;">- Auto-créations</div>
-            <div style="text-indent: 2vh;">- Projets de collaboratifs</div>
+            <div style="text-indent: 2vh;">- Projets collaboratifs</div>
             <br>14 Rue du Cheval Blanc, Nancy <br>À la MJC Lillebonne.
             <br><br>
         </div>
