--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Design by Clémence Fontaine           `--------'-->
         Pour les professionnels, nous pouvons nous déplacer dans votre structure, le temps d’une démonstration, d’un atelier participatif, d’une initiation, etc. Nous nous basons sur vos envies pour créer un atelier adapté à votre espace.  
         ">
             <a href="../page/atelier-ouverts.html">
-                <h3>Atelier-Ouverts</h3>
+                <h3>Atelier ouverts</h3>
                 </a></span>
 
         <span class="infobulle1" aria-label="Nous participons à des évènements et organisons des ateliers et expositions diverses, en lien avec l’artisanat et la sérigraphie. Retrouvez les infos et dates ici prochainement. ">
