--- a/index.html
+++ b/index.html
@@ -199,9 +199,8 @@ Design by Clémence Fontaine           `--------'-->
         </h4>
     </div>
 
-    <div class="crédits">Crédits
-        <br><br>Conception du site : <br>Clémence Fontaine (@fontaine.clemence)
-        <br><br>Typographie :<br> Mazius Display, Alberto Casagrande Ortica, Benedetta Bovani<br>
+    <div class="crédits">Conception du site : <br>Clémence Fontaine (@fontaine.clemence)
+        <br><br>Typographie :<br> Mazius Display, Alberto Casagrande<br>Ortica, Benedetta Bovani<br>
         <br> Ressources, photographies : <br>Camille Berniard (@camiberniard) Philippe Morlot (@phil_mort) terror core (@terror.core)</div>
 
 </body>
