--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ Design by Clémence Fontaine           `--------'-->
 
     <div class="crédits">Conception du site : <br>Clémence Fontaine (@fontaine.clemence)
         <br><br>Typographie :<br> Mazius Display, Alberto Casagrande<br>Ortica, Benedetta Bovani<br>
-        <br> Ressources, photographies : <br>Camille Berniard (@camiberniard) Philippe Morlot (@phil_mort) terror core (@terror.core)</div>
+        <br> Ressources, photographies : <br>Camille Berniard (@camiberniard) <br>Philippe Morlot (@phil_mort)<br> terror core (@terror.core)</div>
 
 </body>
 
