--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@ Design by Clémence Fontaine           `--------'-->
                 <h3>Atelier ouverts</h3>
                 </a></span>
 
-        <span class="infobulle1" aria-label="Nous participons à des évènements et organisons des ateliers et expositions diverses, en lien avec l’artisanat et la sérigraphie. Retrouvez les infos et dates ici prochainement. ">
+        <span class="infobulle1" aria-label="Nous participons à des évènements et organisons des ateliers et expositions diverses, en lien avec l’artisanat et la sérigraphie.
+        
+        Retrouvez les infos et dates ici :
+        En mai 2021, participation à la carte blanche des Nancy Jazz Pulsations — Boutique éphémère, 106 Grande rue, Nancy ">
                     <a href="../page/evenements.html">
                         <h3>Événements</h3>
                         </a></span>
